471058: [release] release Mylyn 3.17
Change-Id: Ida3d1ebeb385ad96569cdfedf6fb6481f282fa25
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=471058

--- a/new/new-3.15.html
+++ b/new/new-3.15.html
@@ -19,9 +19,7 @@
 					<font size="1">41</font><br> <font size="1">bugs</font>
 			</a></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222014-12-11+14:12:00+-0800%22+
-				%28%28branch:master+before:2015-03-13%29+OR+%28branch:e_4_4_m_3_15_x+before:2015-04-30%29+OR+
-				%28branch:master+before:2015-03-17+project:mylyn/org.eclipse.mylyn.docs%29%29,75">
+				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222014-12-11+14:12:00+-0800%22+%28%28branch:master+before:2015-03-13%29+OR+%28branch:e_4_4_m_3_15_x+before:2015-04-30%29+OR+%28branch:master+before:2015-03-17+project:mylyn/org.eclipse.mylyn.docs%29%29,75">
 					<font size="1">100</font><br> <font size="1">reviews</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community contributions were
