--- a/new/new-3.16.html
+++ b/new/new-3.16.html
@@ -19,8 +19,7 @@
 					<font size="1">40</font><br> <font size="1">bugs</font>
 			</a></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222015-03-16+13:00:00+-0800
-				%22+%28%28branch:master+before:2015-06-04%29+OR+%28branch:e_4_4_m_3_16_x+before:2015-06-24%29%29">
+				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222015-03-16+13:00:00+-0800%22+%28%28branch:master+before:2015-06-04%29+OR+%28branch:e_4_4_m_3_16_x+before:2015-06-24%29%29">
 					<font size="1">140</font><br> <font size="1">reviews</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community contributions were
@@ -140,6 +139,7 @@
 		</tr>
 	</table>
 
+	<p>&nbsp;</p>
 	<h2>
 		<a name="cvs">CVS</a>
 	</h2>
@@ -163,6 +163,7 @@
 	</table>
 	
 	
+	<p>&nbsp;</p>
 	<h2>
 		<a name="notifications">Notifications</a>
 	</h2>
@@ -199,6 +200,7 @@
 		</tr>
 	</table>
 
+	<p>&nbsp;</p>
 	<h2>
 		<a name="gerrit">Gerrit Connector</a>
 	</h2>
