move link to all release notes below contributions table
Change-Id: Icdc67ae37169f2ed15dc103072b1e5f35ee38a74
Signed-off-by: Frank Becker <eclipse@frank-becker.de>

--- a/new/new-2.0.html
+++ b/new/new-2.0.html
@@ -68,11 +68,10 @@
 	</tr>
 	</table>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 0.6-1.0</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
-Mylyn 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
-Mylyn 0.3</a></b></p>
+	<p>
+		<div class="news_view_all"><b>Also see the New &amp; Noteworthy for <a href="/mylyn/new/all.php">previous releases</a></b></div>
+	</p>
+
 
 <!--
 
