--- a/new/new-3.13.html
+++ b/new/new-3.13.html
@@ -44,21 +44,7 @@
 	</table>
 
 	<p>
-		<b>Also see the New &amp; Noteworthy for: <a
-			href="http://eclipse.org/mylyn/new/new-3.12.html">Mylyn 3.12</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.9.html">Mylyn 3.9</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.8.html">Mylyn 3.8</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.6.html">Mylyn 3.6</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.4.html">Mylyn 3.4</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, <a
-			href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, <a
-			href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.5.html">Mylyn 0.5</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.3.html">Mylyn 0.3</a></b>
+		<div class="news_view_all"><b>Also see the New &amp; Noteworthy for <a href="/mylyn/new/all.php">previous releases</a></b></div>
 	</p>
 
 	<hr size="1" />
