--- a/new/new-2.0M1.html
+++ b/new/new-2.0M1.html
@@ -27,9 +27,9 @@
 	</tr>
 	</table>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylar/doc/new-1.0.html">Mylar 0.6-1.0</a>, <a href="http://eclipse.org/mylar/doc/new-0.5.html">Mylar 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylar/doc/new-0.4.html">Mylar 0.4</a>, <a href="http://eclipse.org/mylar/doc/new-0.3.html">Mylar 0.3</a></b></p>
+	<p>
+		<div class="news_view_all"><b>Also see the New &amp; Noteworthy for <a href="/mylyn/new/all.php">previous releases</a></b></div>
+	</p>
 <p><b>Update notes</b>: <br>
 &nbsp;&nbsp;&nbsp; - If upgrading from a 0.x version, first update to Mylar 1.0 
 and see the corresponding <a href="http://eclipse.org/mylar/doc/new-1.0.html">
