--- a/new/new-2.0M3.html
+++ b/new/new-2.0M3.html
@@ -55,9 +55,9 @@
 	</tr>
 	</table>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylar/doc/new-1.0.html">Mylar 0.6-1.0</a>, <a href="http://eclipse.org/mylar/doc/new-0.5.html">Mylar 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylar/doc/new-0.4.html">Mylar 0.4</a>, <a href="http://eclipse.org/mylar/doc/new-0.3.html">Mylar 0.3</a></b></p>
+	<p>
+		<div class="news_view_all"><b>Also see the New &amp; Noteworthy for <a href="/mylyn/new/all.php">previous releases</a></b></div>
+	</p>
 <p><b>Update Notes</b> <br>
 &nbsp;&nbsp;&nbsp; - We recommend using the Eclipse 3.3M7 release due to the 
 numerous UI improvements (see Eclipse 3.3 only items below).<br>
