--- a/new/new-2.3.html
+++ b/new/new-2.3.html
@@ -73,12 +73,9 @@
 	</tr>
 	</table>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
-<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
-Mylyn 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
-Mylyn 0.3</a></b></p>
+	<p>
+		<div class="news_view_all"><b>Also see the New &amp; Noteworthy for <a href="/mylyn/new/all.php">previous releases</a></b></div>
+	</p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
 before installing Mylyn 2.3.</p>
 
