479456: update supported Eclipse versions to 3.8 and 4.5
Change-Id: I8d5c1361c64d99060066ee1f3c81e769153173a7
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=479456

--- a/new/new-3.18.html
+++ b/new/new-3.18.html
@@ -58,7 +58,7 @@
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=423848"
 			target="_new"><b>Java 1.7 or later</b></a> and supports <a
 			href="https://wiki.eclipse.org/Mylyn_Integrator_Reference#Deciding_on_a_version"
-			target="_new"><b>Eclipse 3.8, 4.4 or 4.5</b></a>. See the <a href="/mylyn/downloads/">download
+			target="_new"><b>Eclipse 3.8 and 4.5</b></a>. See the <a href="/mylyn/downloads/">download
 			page</a> for repository locations.
 	</p>
 	
