485582: [release] release Mylyn 3.19
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=485582

--- a/new/new-3.19.html
+++ b/new/new-3.19.html
@@ -129,7 +129,7 @@
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The task editor contains a section showing the reviews associated with the task, including which reviews have unread incoming changes.</p>
+				<p align="left">The task editor contains a section showing the reviews associated with the task, and indicates which reviews have unread incoming changes.</p>
 				<p>
 					<img border="0" src="images/3.19/reviews-section.png" />
 				</p>
@@ -147,7 +147,7 @@
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">Inline comments are in threads, directly in the patch sets section in the review editor. This makes it easy to see the conversation taking place at a given line of code. Unread incoming comments are highlighed in blue.</p>
+				<p align="left">Inline comments are shown in threads, directly in the patch sets section in the review editor. This makes it easy to see the conversation taking place at a given line of code. Unread incoming comments are highlighed in blue.</p>
 				<p>
 					<img border="0" src="images/3.19/review-comment-threads.png" />
 				</p>
