492212: [release] release Mylyn 3.20
Change-Id: I2e1848e1f578e2a04a50d4b1f37a2201095ae85d
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=492212

--- a/new/new-3.20.html
+++ b/new/new-3.20.html
@@ -13,6 +13,17 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
+			<td bgcolor="#EFEFEF"><font size="1">3.20.2<br> <i>June 30, 2016</i></font></td>
+			<td bgcolor="#EFEFEF" align="center"></td>
+			<td bgcolor="#EFEFEF" align="center"></td>
+			<td bgcolor="#EFEFEF"><font size="1">Service Release to
+					address <a
+					href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=497040">bug 497040</a> and
+					 <a
+					href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=452674">bug 452674</a>.
+			</font></td>
+		</tr>
+		<tr>
 			<td bgcolor="#EFEFEF"><font size="1">3.20.1<br> <i>June 22, 2016</i></font></td>
 			<td bgcolor="#EFEFEF" align="center"><a
 				href="https://projects.eclipse.org/projects/mylyn/releases/3.20/plan">
