497533: [release] release Mylyn 3.21
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=497533

--- a/new/new-3.21.html
+++ b/new/new-3.21.html
@@ -90,6 +90,25 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
+					<b>Highlight My Tasks</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Tasks assigned to you have a gold task icon in the task list. This makes it easy to
+				distinguish them from other tasks.</p>
+				<p>
+					<img border="0" src="images/3.21/my-tasks.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
 					<b>Scheduling New Tasks</b>
 				</p>
 			</td>
